# KAPITAL

./: README.md  agent.md  main.py  okx_latency_bench.py  optimize_gcp_c4.sh  pyproject.toml
ops/: okx_latency_bench.py  optimize.sh
quant/: __init__.py  config.py  streaming.py
quant/rust/: Cargo.toml  pyproject.toml
quant/rust/src/: lib.rs
tests/: test_rust_bridge.py
